# cryptoauthlib

./: CMakeLists.txt  Jenkinsfile  README.md
lib/: CMakeLists.txt  atca_command.c  atca_command.h
lib/basic/: atca_basic.c  atca_helpers.c  atca_helpers.h
lib/crypto/: atca_crypto_sw_ecdsa.c  atca_crypto_sw_rand.c
lib/crypto/hashes/: sha1_routines.c
lib/hal/: atca_hal.c  atca_hal.h  hal_i2c_stm32l475.c  hal_i2c_stm32l475.h
